fix: ajustando categorias de produtos

--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -181,24 +181,20 @@
                             <label for="productCategory">Categoria *</label>
                             <select id="productCategory" required>
                                 <option value="">Selecione...</option>
-                                <option value="looks">Looks</option>
-                                <option value="masculino">Masculino</option>
-                                <option value="feminino">Feminino</option>
-                                <option value="infantil">Infantil</option>
-                                <option value="acessorios">Acessórios</option>
+                                <!-- Categories will be loaded dynamically -->
                             </select>
                         </div>
                     </div>
 
                     <div class="form-row">
                         <div class="form-group">
-                            <label for="productPrice">Preço *</label>
-                            <input type="text" id="productPrice" placeholder="99,90" required>
+                            <label for="productOriginalPrice">Preço Original</label>
+                            <input type="text" id="productOriginalPrice">
                         </div>
 
                         <div class="form-group">
-                            <label for="productOriginalPrice">Preço Original</label>
-                            <input type="text" id="productOriginalPrice" placeholder="149,90">
+                            <label for="productPrice">Preço *</label>
+                            <input type="text" id="productPrice" required>
                         </div>
 
                         <div class="form-group">
@@ -237,7 +233,7 @@
 
                         <div class="form-group">
                             <label for="productSizes">Tamanhos (separados por vírgula)</label>
-                            <input type="text" id="productSizes" placeholder="PP, P, M, G, GG" value="PP, P, M, G, GG">
+                            <input type="text" id="productSizes" placeholder="PP, P, M, G, GG">
                         </div>
                     </div>
 
