--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -6,12 +6,12 @@
     <title>Dashboard - {{COMPANY_NAME}} Admin</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../assets/images/logo/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/images/logo/favicon.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="/admin/css/admin.css">
 </head>
 <body class="admin-dashboard">
     <!-- Mobile Menu Toggle -->
@@ -40,7 +40,7 @@
                 <i class="fas fa-cog"></i>
                 <span>Configurações</span>
             </a>
-            <a href="../index.html" class="nav-item" target="_blank">
+            <a href="/index.html" class="nav-item" target="_blank">
                 <i class="fas fa-external-link-alt"></i>
                 <span>Ver Site</span>
             </a>
@@ -268,9 +268,9 @@
     </div>
 
     <!-- Color Mapping -->
-    <script src="../assets/js/color-mapping.js"></script>
+    <script src="/assets/js/color-mapping.js"></script>
 
     <!-- Admin Scripts -->
-    <script src="js/admin.js"></script>
+    <script src="/admin/js/admin.js"></script>
 </body>
 </html>
