--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -6,12 +6,12 @@
     <title>Login - {{COMPANY_NAME}} Admin</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../assets/images/logo/favicon.png">
+    <link rel="icon" type="image/png" href="/assets/images/logo/favicon.png">
 
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&family=Montserrat:wght@600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/admin.css">
+    <link rel="stylesheet" href="/admin/css/admin.css">
 </head>
 <body class="login-page">
     <div class="login-container">
@@ -75,6 +75,6 @@
         </div>
     </div>
 
-    <script src="js/login.js"></script>
+    <script src="/admin/js/login.js"></script>
 </body>
 </html>
